--- a/index.html
+++ b/index.html
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html>
-    <head>
-	<link rel="shortcut icon" href="images/legorat.ico">
-        <title>FUCK YOU!!! I HATE YOU!!!</title>
-        <meta charset="UTF-8">
-    </head>
 <style>
 body {
-background-image: url('INSULATION.jpeg');
-background-attachment: fixed;
 background-size: 100% 100%;
 background-repeat: no-repeat;
 background-opacity: 1;
@@ -54,14 +47,10 @@ div.wiki {
 	left: 30px;
 	}
 </style>
-     <body>
-	     
+     <body>   
      <div class="transbox">
-        <h1>Welcome to the official website of insulatoreater69420!</h1>
+        <h1>Welcome to the unblocked games website</h1>
 	<img src="images/dermatologisthate.png" alt="click here now">
-	<h2>How about I love and cherish you? How about that?</h2>
-	<h3>Please email <a href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&source=mailto&to=arthritis@cock.email">arthritis@cock.email</a> for any requests or complaints, or use this <a href="https://forms.gle/SjWuPYr5uWnhcZqA8">form</a>.</h3>
-	 
         <ul>
             <li><a href="./launcher.html#digimon_racing">Digimon Racing</a></li>
             <li><a href="./launcher.html#doom">Doom</a></li>
