--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ div.wiki {
      <body>   
      <div class="transbox">
         <h1>Welcome to the unblocked games website</h1>
-	<img src="images/dermatologisthate.png" alt="click here now">
+	<img src="images/bliu.jpg">
         <ul>
             <li><a href="./launcher.html#digimon_racing">Digimon Racing</a></li>
             <li><a href="./launcher.html#doom">Doom</a></li>
