--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@ div.wiki {
         <h1>Welcome to the unblocked games website</h1>
 	<img src="images/bliu.jpg">
         <ul>
+          <li><a href="https://buttertoasty.github.io/Bowl/suikaGame/index.html">Suika Game</a></li>
             <li><a href="./launcher.html#digimon_racing">Digimon Racing</a></li>
             <li><a href="./launcher.html#doom">Doom</a></li>
             <li><a href="./launcher.html#doom2">Doom 2</a></li>
