--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ opacity: 1;
 }
 div.transbox {
   margin: 30px;
-  background-color: #ffffff;
+  background-image: url("images/lebron.jpg");
   border: 1px solid black;
   border-radius:25px;
   background: rgb(204, 204, 204); /* Fallback for older browsers without RGBA-support */
@@ -23,9 +23,13 @@ div.transbox p {
 	}
   div.non-GBA {
     background-color: green;
+    border: 1px solid black;
+    border-radius:25px;
   }
   div.GBA {
     background-color: aqua;
+    border: 1px solid black;
+    border-radius:25px;
   }
 h1 {
 	margin: 30px;
@@ -125,7 +129,7 @@ div.wiki {
             <li><a href="./launcher.html#minishcap">The Legend of Zelda: The Minish Cap</a></li>
             </div>
         </ul>
-        <h4>Hello, I will torment you for an eternity. Do you understand?</h4>
+        <h4>Hi i graduated fuck u</h4>
 	<h5>*= If you play the randomizer mod, it will override your save for unmodded pokemon emerald.</h5>
      </div>
      </body>
