--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@ div.wiki {
 	<img src="images/bliu.jpg">
         <ul>
           <div class = "non-GBA">
-            <li></li>
+            <h1 ></h1>
           <li><a href="https://buttertoasty.github.io/Bowl/suikaGame/index.html">Suika Game</a></li>
-          <li><a href="https://buttertoasty.github.io/Bowl/bstars/index.html">Basketball Stars </a></li></div>
-          <li></li>
+          <li><a href="https://buttertoasty.github.io/Bowl/bstars/index.html">Basketball Stars </a></li>
+          <h1></h1></div>
           <div class = "GBA">
-            <li></li>
+            <h1></h1>
             <li><a href="./launcher.html#digimon_racing">Digimon Racing</a></li>
             <li><a href="./launcher.html#doom">Doom</a></li>
             <li><a href="./launcher.html#doom2">Doom 2</a></li>
@@ -130,7 +130,7 @@ div.wiki {
             <li><a href="./launcher.html#wariowaretwisted">WarioWare: Twisted!</a></li>
             <li><a href="./launcher.html#alink">The Legend of Zelda: A Link to the Past & Four Swords</a></li>
             <li><a href="./launcher.html#minishcap">The Legend of Zelda: The Minish Cap</a></li>
-            <li></li>
+            <h1></h1>
             </div>
         </ul>
         <h4>Hi i graduated fuck u</h4>
