--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ opacity: 1;
 }
 div.transbox {
   margin: 30px;
-  background-image: url("images/lebron.jpg");
+  background-image: url("lebron.jpg");
   border: 1px solid black;
   border-radius:25px;
   background: rgb(204, 204, 204); /* Fallback for older browsers without RGBA-support */
