--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ div.transbox p {
   color: #000000;
 	}
   div.non-GBA {
-    background-color: green;
+    background-color:honeydew;
     border: 1px solid black;
     border-radius:25px;
   }
