--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <style>
 body {
 background-size: 100% 100%;
+background-image: url("lebron.jpg");
 background-repeat: no-repeat;
 background-opacity: 1;
 color: #000000;
@@ -10,7 +11,7 @@ opacity: 1;
 }
 div.transbox {
   margin: 30px;
-  background-image: url("lebron.jpg");
+  background-color: white;
   border: 1px solid black;
   border-radius:25px;
   background: rgb(204, 204, 204); /* Fallback for older browsers without RGBA-support */
