--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@ div.wiki {
         <ul>
           <div class = "non-GBA">
             <h1 ></h1>
-          <li><a href="https://buttertoasty.github.io/Bowl/suikaGame/index.html">Suika Game</a></li>
-          <li><a href="https://buttertoasty.github.io/Bowl/bstars/index.html">Basketball Stars </a></li>
+          <li><a href="./sm64/index.html">Mario 64</a></li> 
+          <li><a href="./suikaGame/index.html">Suika Game</a></li>
+          <li><a href="./bstars/index.html">Basketball Stars</a></li>
           <h1></h1></div>
           <div class = "GBA">
             <h1></h1>
