--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@ div.transbox p {
     border: 1px solid black;
     border-radius:25px;
   }
+
+  div.fourhoursemen{
+  }
+
 h1 {
 	margin: 30px;
 	color: #000000;
@@ -60,7 +64,13 @@ div.wiki {
      <body>   
      <div class="transbox">
         <h1>Welcome to the unblocked games website</h1>
-	<img src="images/bliu.jpg">
+        <div class = "fourhoursemen">
+          <h1>four horsemen of the acopolsypse</h1>
+          <img src="images/bliu.jpg">
+        	<img src="images/bliu.jpg">
+          <img src="images/gabe.jpeg">
+        	<img src="images/gabe.jpeg">
+</div>
         <ul>
           <div class = "non-GBA">
             <h1 ></h1>
