fixed the four horsemen

--- a/index.html
+++ b/index.html
@@ -33,8 +33,6 @@ div.transbox p {
   }
 
   div.fourhoursemen{
-    height: 300px;
-    width: 300px;
   }
 
 h1 {
@@ -68,10 +66,10 @@ div.wiki {
         <h1>Welcome to the unblocked games website</h1>
         <div class = "fourhoursemen">
           <h1>four horsemen of the acopolsypse</h1>
-          <img src="images/bliu.jpg">
-        	<img src="images/bliu.jpg">
-          <img src="images/gabe.jpeg">
-        	<img src="images/gabe.jpeg">
+          <img src="images/bliu.jpg" width="300" height = "300">
+        	<img src="images/bliu.jpg" width="300" height = "300">
+          <img src="images/gabe.jpeg" width="300" height = "300">
+        	<img src="images/gabe.jpeg" width="300" height = "300">
 </div>
         <ul>
           <div class = "non-GBA">
