--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ div.transbox p {
   }
 
   div.fourhoursemen{
+    width: 700px;
   }
 
 h1 {
@@ -146,7 +147,7 @@ div.wiki {
             <h1></h1>
             </div>
         </ul>
-        <h4>Hi i graduated fuck u</h4>
+        <h4></h4>
 	<h5>*= If you play the randomizer mod, it will override your save for unmodded pokemon emerald.</h5>
      </div>
      </body>
