added titles to the four horsemen

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@ div.transbox p {
     width: 700px;
   }
 
+  div.horsemanbox{
+  }
+
 h1 {
 	margin: 30px;
 	color: #000000;
@@ -69,10 +72,21 @@ div.wiki {
           <h1></h1>
           <h1>four horsemen of the acopolsypse</h1>
           <h1></h1>
+          <div class = "horsemanbox">
+          <h1>crashout bliu</h1>
           <img src="images/bliu.jpg" width="300" height = "300">
+          </div>
+          <div class = "horsemanbox">
         	<img src="images/bliu.jpg" width="300" height = "300">
+          </div>
+          <div class = "horsemanbox">
+            <h1>OVhoe</h1>
           <img src="images/gabe.jpeg" width="300" height = "300">
-        	<img src="images/gabe.jpeg" width="300" height = "300">
+          </div>
+          <div class = "horsemanbox">
+            <h1>Harvard Crashout/SnowbunnyWarrior</h1>
+        	<img src="images/besu.png" width="300" height = "300">
+          </div>
 </div>
         <ul>
           <div class = "non-GBA">
