added some more

--- a/index.html
+++ b/index.html
@@ -89,12 +89,14 @@ div.wiki {
           </div>
 </div>
         <ul>
+          <h1>Non-GBA Games</h1>
           <div class = "non-GBA">
             <h1 ></h1>
           <li><a href="./sm64/index.html">Mario 64</a></li> 
           <li><a href="./suikaGame/index.html">Suika Game</a></li>
           <li><a href="./bstars/index.html">Basketball Stars</a></li>
           <h1></h1></div>
+          <h1>GBA Games</h1>
           <div class = "GBA">
             <h1></h1>
             <li><a href="./launcher.html#digimon_racing">Digimon Racing</a></li>
