--- a/index.html
+++ b/index.html
@@ -76,15 +76,16 @@ div.wiki {
           <h3>crashout bliu</h3>
           <img src="images/bliu.jpg" width="300" height = "300">
           </div>
+          <h1>harvard crashout</h1>
           <div class = "horsemanbox">
-        	<img src="images/bliu.jpg" width="300" height = "300">
+        	<img src="images/blackman.jpg" width="300" height = "300">
           </div>
           <div class = "horsemanbox">
             <h3>OVhoe</h3>
           <img src="images/gabe.jpeg" width="300" height = "300">
           </div>
           <div class = "horsemanbox">
-            <h3>Harvard Crashout/SnowbunnyWarrior</h3>
+            <h3>Snowbunny Warrior</h3>
         	<img src="images/besu.png" width="300" height = "300">
           </div>
 </div>
